new layout for services and centered headlines

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -12,13 +12,13 @@
   </div>
 
   <div class="sy-section__content">
-    <div class="sy-services">
-      <div  class="sy-services__item">
+    <div class="sy-grid__row">
+      <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">UX/UI</h4>
         <p class="sy-services__description">
           Mit rund 20 Jahren Erfahrung in der Konzeption und Umsetzung digitaler Interfaces kennen und können wir das gesamte Spektrum der User Experience (UX). Der kleine, sichtbare Teil davon ist das User Interface (UI), der große unsichtbare (UX) jedoch viel relevanter für die Erreichung ihrer wirtschaftlichen Ziele. Denn nur mit benutzerfreundlichen, leicht verständlichen Journeys über alle Endgeräte, Nutzergruppen und Nutzungskontexte hinweg, erreichen die User und somit Sie ihr Ziel.
         </p>
-        <ul class="sy-list sy-list--dashed">
+        <ul class="sy-list sy-list--dashed sy-list--margin-bottom-none">
           <li class="sy-list__item">Informationsarchitektur (und Navigation)</li>
           <li class="sy-list__item">Information/Content Design (Readability, Scanability, Consistency, Density, Sizes)</li>
           <li class="sy-list__item">User Interface Design (Atomic Design, Pattern Libraries)</li>
@@ -29,21 +29,29 @@
         </ul>
       </div>
 
-      <div  class="sy-services__item">
+      <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">Frontend</h4>
         <p class="sy-services__description">
-          Unsere Lieblingsdings sind ... aber wir sind stets hungrig neue ... zu testen und uns anzueignen. Was immer das Beste für das Projekt ist ... und so weiter.
+          Angular, React, Vue, Node, Polymer, WebComponent, Redux, Atomic Design... - die Liste der Buzzwords nimmt kein Ende.
+          Ständig tauchen neue Bibliotheken auf, die es sich zum Ziel gesetzt haben das Internet (zumindest teilweise) zu revolutionieren und somit sowohl Betrachtern als auch Entwicklern das Leben zu erleichtern.
+          Viele dieser neuen Technologien verbinden ähnliche grundlegende Konzepte wie Modularität und Wiederverwendbarkeit, womit sich die zur Verfügung gestellten Instrumente der unterschiedlichen Technologien einander durchaus ähneln.
+          Umso wichtiger ist es für uns den Überblick zu behalten und die Spreu vom Weizen zu trennen, um für Ihr Projekt genau diejenige Architektur wählen zu können, die eben jene Instrumente bietet die für Ihr Projekt benötigt werden.
+          Dafür haben wir keine Scheu uns mit dem Modernsten des Modernen auseinanderzusetzen, ohne dabei die Produktionsreife eines Frameworks aus den Augen zu lassen.
         </p>
       </div>
+    </div>
+  </div>
 
-      <div  class="sy-services__item">
+  <div class="sy-section__content sy-section__content--margin-top-small">
+    <div class="sy-grid__row">
+      <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">Backend</h4>
         <p class="sy-services__description">
           Ohne einem ordentlichen Fundament ... Dazu beraten und realisieren wir ... und so weiter.
         </p>
       </div>
 
-      <div  class="sy-services__item">
+      <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">Service Development</h4>
         <p class="sy-services__description">
           Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer sicher zu gehen. Vielleicht ist das aber gar nicht das was ihre Nutzer wollen? Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.
