--- a/app/styles/components/headlines.scss
+++ b/app/styles/components/headlines.scss
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h5 {
   counter-reset: paragraph;
   color: sycolor(brand);
   margin-bottom: 60px;
+  text-align: center;
 
   .sy-header__tagline {
     margin-top: 10px;
