split client-icons into smaller chunks

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -69,7 +69,25 @@
 
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Unsere Kunden</h3>
-    <img class="sy-image" alt="" src="../../assets/images/clients.svg">
+    <div>
+      Lorem ullamco tempor eu elit deserunt tempor do sint dolore cupidatat velit occaecat cupidatat. Nostrud deserunt voluptate qui cillum aliqua mollit officia nulla culpa. Lorem eiusmod incididunt anim qui esse elit non.
+    </div>
+  </div>
+
+  <div class="sy-section__content">
+    <div class="sy-grid__row">
+      <div class="sy-grid__col-6 sy-clients-column">
+        <img class="sy-image" alt="" src="../../assets/images/clients-1.png">
+      </div>
+      <div class="sy-grid__col-6 sy-clients-column">
+        <img class="sy-image" alt="" src="../../assets/images/clients-2.png">
+      </div>
+    </div>
+    <div class="sy-grid__row">
+      <div class="sy-grid__col-6 sy-clients-column sy-clients-column--margin-bottom-none">
+        <img class="sy-image" alt="" src="../../assets/images/clients-3.png">
+      </div>
+    </div>
   </div>
 
   <div class="sy-section__content">
