--- a/app/styles/landingpage/index.scss
+++ b/app/styles/landingpage/index.scss
@@ -3,6 +3,7 @@
 @import "services";
 @import "meetups";
 @import "navigation";
+@import "clients";
 @import "contact";
 
 // Push the content for those main sections in a little bit
