roboto for content text

--- a/app/styles/core/scaffolding.scss
+++ b/app/styles/core/scaffolding.scss
@@ -1,6 +1,6 @@
 html {
   font-size: percentage(10/16);
-  font-family: 'Coco Gothic';
+  font-family: 'Roboto';
 
   background-color: sycolor(dark);
   color: sycolor(white);
