--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -1,10 +1,10 @@
-<section class="sy-section sy-landingpage__meet" id="sy-meet">
-  <h2 class="sy-headline sy-headline--section">Meet us</h2>
+<section class="sy-section sy-landingpage__meet" id="sy-contact">
+  <h2 class="sy-headline sy-headline--section">Events</h2>
 
   <div class="sy-section__content">
-    <p>
+    <!-- <p>
       Wir lieben es, Neues zu entdecken und neue Kontakte zu knüpfen. Dort sind wir demnächst:
-    </p>
+    </p> -->
 
     <!--
     <div class="sy-meetups">
@@ -45,7 +45,7 @@
   -->
     <p>
       Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
-      <a href='/#sy-contact' class="sy-link">Schreiben Sie uns.</a>
+      <a href='/#sy-contact-form' class="sy-link">Schreiben Sie uns.</a>
     </p>
   </div>
 </section>
