--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -1,7 +1,7 @@
 <section class="sy-section sy-landingpage__what" id="sy-what">
   <header class="sy-header">
-    <h2 class="sy-headline sy-headline--section">What we do</h2>
-    <span class="sy-header__tagline">Wir bieten nur an, was wir besonders gut können.</span>
+    <h2 class="sy-headline sy-headline--section">Angebot</h2>
+    <span class="sy-header__tagline">Wir bieten nur an, was wir par excellence können.</span>
   </header>
 
   <div class="sy-section__content">
@@ -70,7 +70,7 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Unsere Kunden</h3>
     <div>
-      Lorem ullamco tempor eu elit deserunt tempor do sint dolore cupidatat velit occaecat cupidatat. Nostrud deserunt voluptate qui cillum aliqua mollit officia nulla culpa. Lorem eiusmod incididunt anim qui esse elit non.
+      Für diese Kunden haben wir in den letzten Jahren größere Projekte realisiert oder sind noch dabei
     </div>
   </div>
 
@@ -91,7 +91,7 @@
   </div>
 
   <div class="sy-section__content">
-      <h3 class="sy-headline sy-headline--content">Und viele weiter:</h3>
+      <h3 class="sy-headline sy-headline--content">Und viele weitere</h3>
     <p>
       Unsere Mitarbeiter haben vor ihrer Karriere bei Satellytes viele Jahre in anderen Agenturen oder als Freelancer gearbeitet. In dieser Zeit wurden Launches, Relaunches oder andere Großprojekte realisiert. Unter anderem für Kunden wie: Mercedes-Benz, Audi, MINI, Coca-Cola, Vitra, Swarovski, Glamour, Montblanc, O2, T-Mobile, Deutsche Post, P&S Reemtsma, Bacardi, Bogner, Siemens, Siemens Mobile, T-Online, Pritt, BMW, Mazda, Constantin Film, Esprit, etc.
     </p>
