--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -1,6 +1,6 @@
 <section class="sy-section sy-landingpage__why" id="sy-why">
   <header class="sy-header">
-    <h2 class="sy-headline sy-headline--section">Why us</h2>
+    <h2 class="sy-headline sy-headline--section">Versprechen</h2>
     <span class="sy-header__tagline">WIR SIND AUF IHRER SEITE. UND AUF DER, DES NUTZERS.</span>
   </header>
 
