--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -11,7 +11,7 @@
     <div class="sy-grid sy-grid--two-cols">
       <div class="sy-column">
         <div class="sy-address">
-          <strong>Satellytes</strong><br>
+          <strong>Satellytes GmbH</strong><br>
           Carola-Neher-Str. 10<br>
           81379 München<br>
         </div>
