added white intro-planet to desktop

--- a/app/partials/landingpage/navigation.html
+++ b/app/partials/landingpage/navigation.html
@@ -5,7 +5,17 @@
     <a class="sy-navigation__item" href='/#sy-contact'>Kontakt</a>
   </nav>
 
-  <div class="sy-navigation__bar">
-      <div class="sy-navigation__bar-block"></div>
+  <div class="sy-planet">
+    <div class="sy-planet__orbiter"></div>
   </div>
+
+  <!-- <div class="sy-navigation__language-list">
+    <a href="/en">EN</a>
+  </div> -->
+
+  <div class="sy-navigation__bar">
+    <div class="sy-navigation__bar-block"></div>
+  </div>
+
+  <div class="sy-navigation__bottom-border"></div>
 </div>
