fixed intro for mobile

--- a/app/partials/landingpage/navigation.html
+++ b/app/partials/landingpage/navigation.html
@@ -5,8 +5,8 @@
     <a class="sy-navigation__item" href='/#sy-contact'>Kontakt</a>
   </nav>
 
-  <div class="sy-planet">
-    <div class="sy-planet__orbiter"></div>
+  <div class="sy-large-planet">
+    <div class="sy-large-planet__orbiter"></div>
   </div>
 
   <!-- <div class="sy-navigation__language-list">
