--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -2,52 +2,87 @@
   height: calc(100vh - 60px);
   margin-left: -20px;
   margin-right: -20px;
-  animation: 3s cubic-bezier(0.5, 0.1, 0.37, 0.97) scale-in-logo forwards;
-  transform: scale(0.85);
-}
-
-.sy-intro__compact {
-  display: block;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  align-items: flex-start;
 
   @include media-breakpoint-up(sm) {
-    display: none;
-  }
-}
-
-.sy-intro__large {
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  @include media-breakpoint-up(sm) {
-    display: block;
+    align-items: center;
   }
 }
 
 .sy-intro__svg {
   display: block;
   width: 100%;
-  height: 100%;
+  fill: sycolor(dark);
+  z-index: 100;
+  animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-logo forwards;
+  transform: scale(0.85, 0.85);
+
+  @include media-breakpoint-up(sm) {
+    fill: map-get($colors, white);
+    transform: none;
+  }
 }
 
-.planet__orbiter {
+.sy-small-planet {
+  position: absolute;
+  overflow: hidden;
+  width: 100vw;
+  height: calc(100vh - 60px);
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: -75vw;
+    top: -260vw;
+    height: 380vw;
+    width: 380vw;
+    background-color: white;
+    border-radius: 50%;
+    animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-large-planet forwards;
+    transform: scale(0.98);
+  }
+
+  @include media-breakpoint-up(sm) {
+    display: none;
+  }
+}
+
+.sy-small-planet__orbiter {
   transform-origin: 150px -150px;
   animation: 10s infinite linear orbit;
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: map-get($colors, brand);
+  top: 0;
+  left: -69vw;
+  transform-origin: 200vw -76vw;
+  animation: 10s infinite linear small-orbit;
 }
 
-@keyframes orbit {
+@keyframes small-orbit {
   0% {
-    transform: rotateZ(30deg);
+    transform: rotateZ(-20deg);
   }
   100% {
-    transform: rotateZ(-20deg);
+    transform: rotateZ(-60deg);
+  }
+}
+
+@keyframes scale-in-small-planet {
+  to {
+    height: 400vw;
+    width: 400vw;
   }
 }
 
 @keyframes scale-in-logo {
   to {
-    transform: scale(1);
+    transform: scale(1, 1);
   }
 }
