smaller satellite in mobile intro and font-fallback

--- a/app/styles/core/scaffolding.scss
+++ b/app/styles/core/scaffolding.scss
@@ -1,6 +1,6 @@
 html {
   font-size: percentage(10/16);
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
 
   background-color: sycolor(dark);
   color: sycolor(white);
