smooth scrolling only where supported natively

--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -1,10 +1,11 @@
-<section class="sy-section" id="sy-contact-form">
+<section class="sy-section">
+  <a id="sy-contact-form" class="sy-anchor"></a>
   <h2 class="sy-headline sy-headline--section">Kontakt</h2>
 
   <div class="sy-section__content">
     <p>
-        Nutzen Sie unser Kontaktformular oder schreiben Sie uns eine E-Mail an
-        <a class="sy-link" href='mailto:ping@satellytes.com'>ping@satellytes.com</a>.
+      Nutzen Sie unser Kontaktformular oder schreiben Sie uns eine E-Mail an
+      <a class="sy-link" href='mailto:ping@satellytes.com'>ping@satellytes.com</a>.
     </p>
 
     <div class="sy-spacer"></div>
