--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -1,4 +1,5 @@
-<section class="sy-section sy-landingpage__meet" id="sy-contact">
+<section class="sy-section sy-landingpage__meet">
+  <a id="sy-contact" class="sy-anchor"></a>
   <h2 class="sy-headline sy-headline--section">Events</h2>
 
   <div class="sy-section__content">
@@ -43,7 +44,7 @@
     </div>
     <p>
       Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
-      <a href='/#sy-contact-form' class="sy-link">Schreiben Sie uns.</a>
+      <a href='#sy-contact-form' class="sy-link">Schreiben Sie uns.</a>
     </p>
   </div>
 </section>
