--- a/app/partials/landingpage/navigation.html
+++ b/app/partials/landingpage/navigation.html
@@ -1,8 +1,8 @@
 <div class="sy-navigation">
   <nav class="sy-navigation__list">
-    <a class="sy-navigation__item" href='/#sy-what'>Angebot</a>
-    <a class="sy-navigation__item" href='/#sy-why'>Versprechen</a>
-    <a class="sy-navigation__item" href='/#sy-contact'>Kontakt</a>
+    <a class="sy-navigation__item" href='#sy-what'>Angebot</a>
+    <a class="sy-navigation__item" href='#sy-why'>Versprechen</a>
+    <a class="sy-navigation__item" href='#sy-contact'>Kontakt</a>
   </nav>
 
   <div class="sy-large-planet">
