--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -1,4 +1,5 @@
-<section class="sy-section sy-landingpage__what" id="sy-what">
+<section class="sy-section sy-landingpage__what">
+  <a id="sy-what" class="sy-anchor"></a>
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">Angebot</h2>
     <span class="sy-header__tagline">Wir bieten nur an, was wir par excellence können.</span>
