--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -1,4 +1,5 @@
-<section class="sy-section sy-landingpage__why" id="sy-why">
+<section class="sy-section sy-landingpage__why">
+  <a id="sy-why" class="sy-anchor"></a>
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">Versprechen</h2>
     <span class="sy-header__tagline">WIR SIND AUF IHRER SEITE. UND AUF DER, DES NUTZERS.</span>
