content updates, fixed links

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -31,7 +31,7 @@
       </div>
 
       <div  class="sy-services__item sy-grid__col-6">
-        <h4 class="sy-services__headline">Frontend</h4>
+        <h4 class="sy-services__headline">Full Stack</h4>
         <p class="sy-services__description">
           Angular, React, Vue, Node, Polymer, WebComponent, Redux, Atomic Design... - die Liste der Buzzwords nimmt kein Ende.
           Ständig tauchen neue Bibliotheken auf, die es sich zum Ziel gesetzt haben das Internet (zumindest teilweise) zu revolutionieren und somit sowohl Betrachtern als auch Entwicklern das Leben zu erleichtern.
@@ -45,12 +45,6 @@
 
   <div class="sy-section__content sy-section__content--margin-top-small">
     <div class="sy-grid__row">
-      <div  class="sy-services__item sy-grid__col-6">
-        <h4 class="sy-services__headline">Backend</h4>
-        <p class="sy-services__description">
-          Ohne einem ordentlichen Fundament ... Dazu beraten und realisieren wir ... und so weiter.
-        </p>
-      </div>
 
       <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">Service Development</h4>
