hotfix: footer links, animation planet, font navigation

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -11,34 +11,17 @@
       <div class="sy-meetups__item">
         <div class="sy-meetups__date">
           <span class="sy-meetups__date-month">
-            Apr
+            Jul
           </span>
           <span class="sy-meetups__date-day">
-            22
+            24
           </span>
         </div>
 
         <div>
-          <span>UX Meetup</span>
-          <p>IXDS: Ipsum Dolor</p>
-          <a href='#' class="sy-link">Details</a>
-        </div>
-      </div>
-
-      <div class="sy-meetups__item">
-        <div class="sy-meetups__date">
-          <span class="sy-meetups__date-month">
-            Apr
-          </span>
-          <span class="sy-meetups__date-day">
-            22
-          </span>
-        </div>
-
-        <div>
-          <span>UX Meetup</span>
-          <p>IXDS: Ipsum Dolor</p>
-          <a href='#' class="sy-link">Details</a>
+          <span>DAHO.AM 18</span>
+          <p> The Pure Tech Conference</p>
+          <a href='https://daho.am/' target="_blank" class="sy-link">Details</a>
         </div>
       </div>
     </div>
