--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="sy-footer sy-section">
   <div class="sy-section__content">
-    <div class="sy-footer__weblinks">
+    <!-- <div class="sy-footer__weblinks">
       <img class="sy-footer__weblinks-item" alt="soial icon xing" src="../assets/images/icon-xing.svg"/>
       <img class="sy-footer__weblinks-item" alt="soial icon linkedin" src="../assets/images/icon-linkedin.svg"/>
       <img class="sy-footer__weblinks-item" alt="soial icon facebook" src="../assets/images/icon-facebook.svg"/>
       <img class="sy-footer__weblinks-item" alt="soial icon twitter" src="../assets/images/icon-twitter.svg"/>
-    </div>
+    </div> -->
   </div>
 
   <div class="sy-section__content">
