--- a/app/styles/landingpage/navigation.scss
+++ b/app/styles/landingpage/navigation.scss
@@ -41,7 +41,7 @@
   text-decoration: none;
   line-height: $nav-height;
   font-size: 1.6rem;
-  font-weight: map-get($font-weights, bold);
+  font-weight: map-get($font-weights, normal);
 
   @include media-breakpoint-up(sm) {
     &:not(:first-child){
@@ -79,49 +79,4 @@
   height: 1px;
   background-color: rgba(sycolor(brand), 0.2);
   z-index: 10;
-}
-
-.sy-large-planet {
-  position: absolute;
-  left: 35vw;
-  top: -300vw;
-  height: 380vw;
-  width: 380vw;
-  background-color: white;
-  border-radius: 50%;
-  animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-large-planet forwards;
-  transform: scale(0.98);
-  display: none;
-
-  @include media-breakpoint-up(sm) {
-    display: block;
-  }
-}
-
-.sy-large-planet__orbiter {
-  position: absolute;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  background-color: map-get($colors, brand);
-  top: calc(50% - 8px);
-  left: -11px;
-  transform-origin: calc(200vw + 11px) 0;
-  animation: 20s infinite linear large-orbit;
-}
-
-@keyframes large-orbit {
-  0% {
-    transform: rotateZ(-28deg);
-  }
-  100% {
-    transform: rotateZ(-50deg);
-  }
-}
-
-@keyframes scale-in-large-planet {
-  to {
-    height: 400vw;
-    width: 400vw;
-  }
 }
