chore: Remove anchor from "Schreiben Sie uns"

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -27,7 +27,7 @@
     </div>
     <p>
       Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
-      <a href='#sy-contact-form' class="sy-link">Schreiben Sie uns.</a>
+      Schreiben Sie uns.
     </p>
   </div>
 </section>
