include sitemap.xml, change html urls to pretty format

--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -10,8 +10,8 @@
 
   <div class="sy-section__content">
     <div class="sy-footer__servicelinks">
-      <a href='/imprint.html' class="sy-footer__servicelinks-item sy-link">Impressum</a>
-      <a href='/privacy.html' class="sy-footer__servicelinks-item sy-link">Datenschutz</a>
+      <a href='/imprint' class="sy-footer__servicelinks-item sy-link">Impressum</a>
+      <a href='/privacy' class="sy-footer__servicelinks-item sy-link">Datenschutz</a>
     </div>
   </div>
 </footer>
