change contact mail from ping@ to beep@

--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -5,7 +5,7 @@
   <div class="sy-section__content">
     <p>
       Nutzen Sie unser Kontaktformular oder schreiben Sie uns eine E-Mail an
-      <a class="sy-link" href='mailto:ping@satellytes.com'>ping@satellytes.com</a>.
+      <a class="sy-link" href='mailto:beep@satellytes.com'>beep@satellytes.com</a>.
     </p>
 
     <div class="sy-spacer"></div>
