--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -3,13 +3,14 @@ $container-max-widths: 1200px;
 
 $grid-columns: 12;
 $grid-gutter-width: 30px;
-$grid-enable-classes: true;
+
+// we don't need css classes for the grid, as we are using mixins directly.
+$grid-enable-classes: false;
 
 $font-weights: (
   light: 200,
   regular: 400,
-  bold: 600,
-  heavy: 800
+  bold: 600
 );
 
 $colors: (
