perf: optimizations to reduce bundle size
+ pixi 5 alpha for tree shaking
+ removed grid generated css classes
+ disabled font inlining

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,7 +2,7 @@
 
 @import "mixins/breakpoint";
 @import "mixins/functions";
-@import "mixins/grid-framework";
+// @import "mixins/grid-framework";
 @import "mixins/grid";
 
 // core set of functionality
