--- a/app/styles/core/grid-scaffolding.scss
+++ b/app/styles/core/grid-scaffolding.scss
@@ -3,7 +3,7 @@
 //
 // Set the container width, and override it for fixed navbars in media queries.
 
-@if grid-enable-classes {
+@if $grid-enable-classes {
   .container {
     @include make-container();
     @include make-container-max-widths();
@@ -15,7 +15,7 @@
 // Utilizes the mixin meant for fixed width containers, but with 100% width for
 // fluid, full width layouts.
 
-@if grid-enable-classes {
+@if $grid-enable-classes {
   .container-fluid {
     @include make-container();
   }
@@ -25,7 +25,7 @@
 //
 // Rows contain and clear the floats of your columns.
 
-@if grid-enable-classes {
+@if $grid-enable-classes {
   .row {
     @include make-row();
   }
@@ -48,6 +48,6 @@
 //
 // Common styles for small and large grid columns
 
-@if grid-enable-classes {
+@if $grid-enable-classes {
   @include make-grid-columns();
 }
