fix: Logo Sizes, Refactor Code Initialization, Updated Dates

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -11,17 +11,53 @@
       <div class="sy-meetups__item">
         <div class="sy-meetups__date">
           <span class="sy-meetups__date-month">
-            Jul
+            Nov 2018
           </span>
           <span class="sy-meetups__date-day">
-            24
+            6+7
           </span>
         </div>
 
         <div>
-          <span>DAHO.AM 18</span>
-          <p> The Pure Tech Conference</p>
-          <a href='https://daho.am/' target="_blank" class="sy-link">Details</a>
+          <span>AngularConnect 2018</span>
+          <p>Europe’s largest Angular conference</p>
+          <a href='https://angularconnect.com/' target="_blank" class="sy-link">Details</a>
+        </div>
+      </div>
+
+
+      <div class="sy-meetups__item">
+        <div class="sy-meetups__date">
+          <span class="sy-meetups__date-month">
+            Feb 2019
+          </span>
+          <span class="sy-meetups__date-day">
+            18+19
+          </span>
+        </div>
+
+        <div>
+          <span>FITC 2019</span>
+          <p>Design. Technology.</p>
+          <a href='https://fitc.ca/' target="_blank" class="sy-link">Details</a>
+        </div>
+      </div>
+
+
+      <div class="sy-meetups__item">
+        <div class="sy-meetups__date">
+          <span class="sy-meetups__date-month">
+            Apr 2019
+          </span>
+          <span class="sy-meetups__date-day">
+            25-27
+          </span>
+        </div>
+
+        <div>
+          <span>OFFF Barcelona 2019</span>
+          <p>Creatives Festival</p>
+          <a href='https://fitc.ca/' target="_blank" class="sy-link">Details</a>
         </div>
       </div>
     </div>
