--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -2,7 +2,7 @@
   <a id="sy-why" class="sy-anchor"></a>
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">Versprechen</h2>
-    <span class="sy-header__tagline">WIR SIND AUF IHRER SEITE. UND AUF DER, DES NUTZERS.</span>
+    <span class="sy-header__tagline">Wir sind auf Ihrer Seite. Und auf der des Nutzers.</span>
   </header>
 
   <div class="sy-section__content">
