fix: use different navigation partials in subpages

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -56,7 +56,7 @@
 
         <div>
           <span>OFFF Barcelona 2019</span>
-          <p>Creatives Festival</p>
+          <p>Creative Festival</p>
           <a href='https://fitc.ca/' target="_blank" class="sy-link">Details</a>
         </div>
       </div>
