update meetus, disable backuprund

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -37,7 +37,7 @@
         </div>
 
         <div>
-          <span>FITC 2019</span>
+          <span>FITC Amsterdam 2019</span>
           <p>Design. Technology.</p>
           <a href='https://fitc.ca/' target="_blank" class="sy-link">Details</a>
         </div>
