update section what

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -33,7 +33,7 @@
       <div  class="sy-services__item sy-grid__col-6">
         <h4 class="sy-services__headline">Full Stack</h4>
         <p class="sy-services__description">
-          Angular, React, Vue, Node, Polymer, WebComponent, Redux, Atomic Design... - die Liste der Buzzwords nimmt kein Ende.
+          Angular, React, Vue, Node, Polymer, WebComponent, Redux, Atomic Design ... — die Liste der Buzzwords nimmt kein Ende.
           Ständig tauchen neue Bibliotheken auf, die es sich zum Ziel gesetzt haben das Internet (zumindest teilweise) zu revolutionieren und somit sowohl Betrachtern als auch Entwicklern das Leben zu erleichtern.
           Viele dieser neuen Technologien verbinden ähnliche grundlegende Konzepte wie Modularität und Wiederverwendbarkeit, womit sich die zur Verfügung gestellten Instrumente der unterschiedlichen Technologien einander durchaus ähneln.
           Umso wichtiger ist es für uns den Überblick zu behalten und die Spreu vom Weizen zu trennen, um für Ihr Projekt genau diejenige Architektur wählen zu können, die eben jene Instrumente bietet die für Ihr Projekt benötigt werden.
